syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service ApplicantJobApplicationService{

rpc GetApplicantJobApplication(AppJobApplicationIdRequest) returns(ApplicantJobApplication);
  rpc CreateApplicantJobApplication(ApplicantJobApplications) returns (google.protobuf.Empty);
  rpc UpdateApplicantJobApplication(ApplicantJobApplications) returns(google.protobuf.Empty); 
  rpc DeleteApplicantJobApplication(ApplicantJobApplications)  returns (google.protobuf.Empty);


}

message AppJobApplicationIdRequest{
	  string Id = 1;
 }
 message ApplicantJobApplication{
 
 
 string Id = 1;
 string Applicant = 2;
 string Job = 3;
 google.protobuf.Timestamp ApplicationDate = 4;
 
 }

 message ApplicantJobApplications{
      repeated ApplicantJobApplication AppJob = 1;
 }
 
 
 
 
 /* public Guid Id { get; set; }
        public Guid Applicant { get; set; }
        public Guid Job { get; set; }

        [Column("Application_Date")]
        public DateTime ApplicationDate { get; set; }
*/
 
 
 
 
 
 